Add solarsystem3 files

--- a/new_folder/solarsystem.html
+++ b/new_folder/solarsystem.html
@@ -13,6 +13,9 @@
         <div class="orbit earth">
             <div class="planet"></div>
             
+            <div class="orbit mars">
+            <div class="planet"></div>
+            
     </div>
 </body>
 </html>
